--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
@@ -32,7 +32,8 @@ mixin s-portfolio()
 				#tab1.wrks__tbs-itm
 					.arn-msnr
 						//- .cl-sizer.cl-1
-						+b.cl.cl-7.itm(href="#" style="background-image: url('img/project-1.jpg');")
+						+b.cl.cl-7.itm.img-bg(href="#")
+							img.lazy-bg-js(src="#" data-src="img/project-1.jpg")
 							.itm__more
 								.ttl-bord
 									+e.DIV.title Билборд  для лечебного  центра компания&nbsp;&mdash;  
@@ -40,7 +41,8 @@ mixin s-portfolio()
 										span.thm.d-inline-block D-medical
 								button.btt.btt-blue(type="button")
 									span Нажмите для просмотра проекта
-						+b.cl.cl-5.itm(href="#" style="background-image: url('img/project-2.jpg');")
+						+b.cl.cl-5.itm.img-bg(href="#")
+							img.lazy-bg-js(src="#" data-src="img/project-2.jpg")
 							.itm__more
 								.ttl-bord
 									+e.DIV.title  Продающий сайт   для  
@@ -50,7 +52,8 @@ mixin s-portfolio()
 									span Нажмите для просмотра проекта
 						.cl-7
 							.arn-msnr
-								+b.cl.cl-7.itm.ht6(href="#" style="background-image: url('img/project-3.jpg');")
+								+b.cl.cl-7.itm.ht6.img-bg(href="#")
+									img.lazy-bg-js(src="#" data-src="img/project-3.jpg")
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Продающий сайт   для  
@@ -58,7 +61,8 @@ mixin s-portfolio()
 												span.thm.d-inline-block it&nbsp;компании  General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
-								+b.cl.cl-5.itm.ht6(href="#" style="background-image: url('img/project-4.jpg');")
+								+b.cl.cl-5.itm.ht6.img-bg(href="#")
+									img.lazy-bg-js(src="#" data-src="img/project-4.jpg")
 									.itm__more
 										.ttl-bord
 											+e.DIV.title Листовка   для 
@@ -70,7 +74,8 @@ mixin s-portfolio()
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						 
-								+b.cl.cl-7.itm.ht5(href="#" style="background-image: url('img/project-5.jpg');")
+								+b.cl.cl-7.itm.ht5.img-bg(href="#")
+									img.lazy-bg-js(src="#" data-src="img/project-5.jpg")
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Продающий сайт   для  
@@ -79,7 +84,8 @@ mixin s-portfolio()
 												span.thm.d-inline-block it&nbsp;компании  General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
-								+b.cl.cl-5.itm.ht5(href="#" style="background-image: url('img/project-7.jpg');")
+								+b.cl.cl-5.itm.ht5.img-bg(href="#")
+									img.lazy-bg-js(src="#" data-src="img/project-7.jpg")
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Листовка   для 
@@ -89,7 +95,8 @@ mixin s-portfolio()
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						.cl-5.cl-5-right
-							+b.cl.cl-12.itm.ht4(href="#" style="background-image: url('img/project-7.jpg');")
+							+b.cl.cl-12.itm.ht4.img-bg(href="#")
+								img.lazy-bg-js(src="#" data-src="img/project-7.jpg")
 								.itm__more
 									.ttl-bord
 										+e.DIV.title  Продающий сайт   для 
@@ -98,7 +105,8 @@ mixin s-portfolio()
 											|  для компании  Geroy
 									button.btt.btt-blue(type="button")
 										span Нажмите для просмотра проекта
-							+b.cl.cl-12.itm(href="#" style="background-image: url('img/project-8.jpg');")
+							+b.cl.cl-12.itm.img-bg(href="#")
+								img.lazy-bg-js(src="#" data-src="img/project-8.jpg")
 								.itm__more
 									.ttl-bord
 										+e.DIV.title  Продающий сайт   для 
@@ -107,7 +115,8 @@ mixin s-portfolio()
 											| “Лабиринт”
 									button.btt.btt-blue(type="button")
 										span Нажмите для просмотра проекта
-						+b.cl.cl-7.itm(href="#" style="background-image: url('img/project-9.jpg');")
+						+b.cl.cl-7.itm.img-bg(href="#")
+							img.lazy-bg-js(src="#" data-src="img/project-9.jpg")
 							.itm__more
 								.ttl-bord
 									+e.DIV.title Билборд  для лечебного  центра компания&nbsp;&mdash;  
@@ -115,7 +124,8 @@ mixin s-portfolio()
 										span.thm.d-inline-block D-medical
 								button.btt.btt-blue(type="button")
 									span Нажмите для просмотра проекта
-						+b.cl.cl-5.itm.lst(href="#" style="background-image: url('img/project-all.jpg');")
+						+b.cl.cl-5.itm.lst.img-bg(href="#")
+							img.lazy-bg-js(src="#" data-src="img/project-all.jpg")
 							#loadWorks.itm__more()
 								big.thm.d-inline-block
 									big +34
