--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.scss
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.scss
@@ -32,6 +32,24 @@
     display: flex;
     flex-wrap: wrap;
     .itm{
+      position: relative;
+      // background-color: rgba($color: #2c2d45, $alpha: .89); 
+      @include mt;
+      &::before{
+        content: ''; 
+        @include a-cent;
+        // background-color: $body-color; 
+        width: 100%;
+        height: 100%;
+        @include mt;
+        opacity: 1;
+
+      }
+      &.lazyloaded{
+        &::before{
+          opacity: 0;
+        }
+      }
       // min-height: 100%;
     }
   }
@@ -211,6 +229,7 @@
         // padding: 0 !important;
        }
       .wrks__tbs-itm .itm {
+        // background-color: $body-color;
         @include media-breakpoint-up(xxl){
           font-size: calc(1.31rem + .72vw) !important;
         }
@@ -349,8 +368,8 @@
           // margin-top: 45px; 
         }
         .itm__more {
-          // opacity: 0; 
-          // transform: scale(.9);
+          opacity: 0; 
+          transform: scale(.9);
         }
         .wrks__tbs-itm .itm:hover .itm__more {
           opacity: 1; 
