--- a/sourse/pug/blocks/header-block/_header-block.pug
+++ b/sourse/pug/blocks/header-block/_header-block.pug
@@ -9,7 +9,7 @@ mixin header-block()
 							.wrp__bg.wow.slideInRight(data-wow-duration='1.2s')
 							// / WRP
 							.arn.prm__wrp
-								.row.fx-aic
+								.row
 									.col-md-8.col-lg-7.col-xl-7.col-xxxl-6
 										.prm__dsc
 											block
