--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.scss
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.scss
@@ -38,7 +38,7 @@
       &::before{
         content: ''; 
         @include a-cent;
-        // background-color: $body-color; 
+        background-color: $body-color; 
         width: 100%;
         height: 100%;
         @include mt;
@@ -114,6 +114,7 @@
     background-image: url(../img/nav-before.svg);
     background-size: 100% 100%;
     opacity: 0;
+    pointer-events: none;
   }
 }
 
